# pocket-llm

./: .gitignore  .releaserc.json  CLAUDE.md  LICENSE  README.md  build.gradle.kts  gradlew.bat  settings.gradle.kts
.github/workflows/: ci.yml  pre-release.yml  release.yml
.specify/memory/: constitution.md
app/: build.gradle.kts
app/schemas/dev.nutting.pocketllm.data.local.PocketLlmDatabase/: 1.json  2.json  3.json  4.json  5.json  6.json
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/nutting/pocketllm/: AppContainer.kt  MainActivity.kt  PocketLlmApplication.kt
app/src/main/java/dev/nutting/pocketllm/data/local/: PocketLlmDatabase.kt
app/src/main/java/dev/nutting/pocketllm/data/preferences/: EncryptedDataStore.kt  SettingsDataStore.kt
app/src/main/java/dev/nutting/pocketllm/data/remote/: OpenAiApiClient.kt
app/src/main/java/dev/nutting/pocketllm/data/repository/: ConversationRepository.kt  MessageRepository.kt  ServerRepository.kt  SettingsRepository.kt
app/src/main/java/dev/nutting/pocketllm/domain/: ChatManager.kt  LocalLlmClient.kt
app/src/main/java/dev/nutting/pocketllm/domain/tool/: CalculatorTool.kt  ToolExecutor.kt  WebFetchTool.kt
app/src/main/java/dev/nutting/pocketllm/ui/chat/: ChatScreen.kt  ChatUiState.kt  ChatViewModel.kt  CompactionIndicator.kt  ConversationSettingsSheet.kt  MessageBubble.kt  MessageInput.kt  ThinkingSection.kt  ToolCallCard.kt
app/src/main/java/dev/nutting/pocketllm/ui/conversations/: ConversationListScreen.kt  (+2 more)
app/src/main/java/dev/nutting/pocketllm/util/: ImageCompressor.kt  ModelDownloadWorker.kt  ModelDownloader.kt  TokenCounter.kt
app/src/main/java/dev/nutting/template/: MainActivity.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/test/java/dev/nutting/pocketllm/: ExampleUnitTest.kt
app/src/test/java/dev/nutting/pocketllm/domain/: ChatManagerTest.kt
app/src/test/java/dev/nutting/pocketllm/util/: TokenCounterTest.kt
app/src/test/java/dev/nutting/template/: ExampleUnitTest.kt
llm/: build.gradle.kts
llm/src/main/cpp/: CMakeLists.txt  llm_jni.cpp
llm/src/main/java/dev/nutting/pocketllm/llm/: LlmEngine.kt
scripts/: set-version.sh
specs/001-llm-chat/: accessibility-checklist.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-chat/checklists/: requirements.md
specs/001-llm-chat/contracts/: openai-compatible-api.md
(+42 files in other folders)
